More Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ DeckcendantFinal/Library/ScriptAssemblies/UnityEditor.UI.dll
 DeckcendantFinal/Library/ScriptAssemblies/UnityEngine.TestRunner.dll
 DeckcendantFinal/Library/ScriptAssemblies/UnityEngine.UI.dll
 DeckcendantFinal/Library/shadercompiler-UnityShaderCompiler.exe0.log
+DeckcendantFinal/Library/CurrentLayout-default.dwlt
+DeckcendantFinal/Library/SceneVisibilityState.asset
